--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,3 +49,8 @@ updates:
   - dependency-name: react-dom
     versions:
     - 17.x
+- package-ecosystem: "github-actions"
+  directory: "/"
+  schedule: 
+    interval: weekly
+  open-pull-requests-limit: 99
